fix tables
